--- a/style/home.css
+++ b/style/home.css
@@ -49,3 +49,14 @@ header > .navbar{
 .statistic{
     float: left;
 }
+ul li>u{
+    color: #E6C37A;
+}
+#locations{
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    background-color: #243945;
+    color: white;
+    margin-top: 30px;
+    padding: 10px;
+    padding-left: 8%;
+}
