--- a/style/crypto.css
+++ b/style/crypto.css
@@ -1,4 +1,7 @@
 header > .navbar{
     background-color: #243945;
     color: white;
+    border-radius: 20px;
+    margin: 5px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
