--- a/style/about_us.css
+++ b/style/about_us.css
@@ -1,4 +1,11 @@
 header > .navbar{
     background-color: #243945;
     color: white;
+    border-radius: 20px;
+    margin: 5px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+.nav-link:hover{
+    font-weight: bold;
+    text-decoration: underline;
 }
