--- a/style/home.css
+++ b/style/home.css
@@ -5,6 +5,10 @@ header > .navbar{
     margin: 5px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
+.nav-link:hover{
+    font-weight: bold;
+    text-decoration: underline;
+}
 #h{
     background-color: white;
     align-text:50px right;
