--- a/style/contact_us.css
+++ b/style/contact_us.css
@@ -9,5 +9,10 @@ header > .navbar{
     font-weight: bold;
     text-decoration: underline;
 }
-
-
+.header {
+  padding: 60px;
+  text-align: center;
+  background: #243945;
+  color: white;
+  font-size: 30px;
+}
