--- a/style/login&signup.css
+++ b/style/login&signup.css
@@ -14,6 +14,10 @@ header > .navbar{
 .butoni{
   cursor: pointer;
 }
+.nav-link:hover{
+  font-weight: bold;
+  text-decoration: underline;
+}
 
 /*
 .form{
