--- a/style/contact_us.css
+++ b/style/contact_us.css
@@ -9,7 +9,10 @@ header > .navbar{
     font-weight: bold;
     text-decoration: underline;
 }
-
+body {
+  position: relative;
+  margin: 0;
+}
 navbar {
   background-color: #333;
   position: fixed;
@@ -56,7 +59,7 @@ navbar a:hover {
   }
 
   footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
