--- a/style/crypto.css
+++ b/style/crypto.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #243945;
+    background-color: rgb(73, 73, 41);
 }
 header > .navbar{
     background-color: #E6C37A;
@@ -11,6 +11,7 @@ header > .navbar{
 .nav-link:hover{
     font-weight: bold;
     text-decoration: underline;
+    color:white;
 }
 .container{
     background-color: #E6C37A;
@@ -31,4 +32,7 @@ header > .navbar{
     font-weight: bold;
     text-align: center;
     color: black;
+}
+.nav-link{
+    color:white;
 }
