--- a/style/contact_us.css
+++ b/style/contact_us.css
@@ -56,7 +56,8 @@ navbar a:hover {
   }
 
   footer {
-    position: absolute;
+    position: relative;
+    top: 5px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -131,4 +132,8 @@ navbar a:hover {
     text-transform: uppercase;
     opacity: .4;
     font-weight: 200;
+  }
+
+  .submit {
+    margin-bottom: 25px;
   }
