Disa ndryshime ne projekt

--- a/style/about_us.css
+++ b/style/about_us.css
@@ -48,6 +48,9 @@ header > .navbar{
     color: #fff;
     margin-top: 275px;
     font-family: Calibri;
+    font-size: 17px;
+    border-radius: 20px;
+    outline-width: 2px;
 }
 li>.dropdown-item{
     color: white;
