--- a/style/contact_us.css
+++ b/style/contact_us.css
@@ -156,3 +156,12 @@ navbar a:hover {
       padding: 10px 0;
       padding-top: 18px;
   }
+
+  #p1{
+    text-shadow: 5px 5px 5px #243945;
+    background-color: #FFFFFF
+  }
+
+  .input-box {
+    overflow-wrap: break-word; 
+  }
