--- a/style/contact_us.css
+++ b/style/contact_us.css
@@ -159,7 +159,7 @@ navbar a:hover {
 
   #p1{
     text-shadow: 5px 5px 5px #243945;
-    background-color: #FFFFFF
+    background-image: radial-gradient(#243945, white, blue);
   }
 
   .input-box {
