--- a/style/privacy_policy.css
+++ b/style/privacy_policy.css
@@ -190,3 +190,8 @@ footer {
         padding: 10px 0;
         padding-top: 18px;
     }
+
+    .privacy_policy {
+        margin: 5px;
+      }
+      
