--- a/style/privacy_policy.css
+++ b/style/privacy_policy.css
@@ -1,197 +1,8 @@
-header > .navbar{
+header {
     background-color: #243945;
-    color: white;
-    border-radius: 20px;
-    margin: 5px;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-}
-.nav-link:hover{
-    font-weight: bold;
-    text-decoration: underline;
-}
-.dropdown_menu{
-    display: none;
-}
-.dropdown_menu ul{
-    list-style: none;
-}
-.dropdown_menu ul li a{
-    text-decoration: none;
-    color: #fff;
-}
-.dropdown_menu ul li a:hover{
-    color: black;
-}
-.menu-drop ul li:hover .dropdown_menu{
-    display: block;
-    position: absolute;
-    background-color: #243945;
-    margin-top: 5px;
-    margin-left: -15px;
-    z-index: 1;
-}
-.menu-drop ul li:hover .dropdown_menu ul{
-    display: block;
-    margin: 10px;
-    margin-left: -20px;
-}
-.menu-drop ul li:hover .dropdown_menu ul li{
-    width: 120px;
-    padding: 10px;
-    border-bottom: 1px dotted #fff;
-    background: transparent;
-    text-align: left;
-}
-
-.description_container{
-    background-color: #243945;
-    color: #fff;
-    margin-top: 275px;
-    font-family: Calibri;
-    font-size: 17px;
-    border-radius: 20px;
-    outline-width: 2px;
-}
-li>.dropdown-item{
-    color: white;
+     color: white;
+     border-radius: 20px;
+     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+     height: 50px
   }
-  li>.dropdown-item:hover{
-    color:black;
-  }
-/*about us*/
-
-
-header > .navbar{
-    background-color: #243945;
-    color: white;
-    border-radius: 20px;
-    margin: 5px 5px 45px 5px;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-}
-.nav-link:hover{
-    font-weight: bold;
-    text-decoration: underline;
-}
-li>.dropdown-item{
-    color: white;
-}
-li>.dropdown-item:hover{
-    color:black;
-}
-navbar {
-  background-color: #333;
-  position: fixed;
-  top: -50px;
-  width: 100%;
-  display: block;
-  transition: top 0.3s;
-}
-
-navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 15px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-
-footer {
-    position: relative;
-    top: 5px;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
-    background: #243945;
-    height: auto;
-    width: 100vw;
-    font-family: "Open Sans";
-    padding-top: 40px;
-    color: #fff;
-  }
-
-
-  .footer-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .footer-content h3{
-    font-size: 1.8rem;
-    font-weight: 400;text-transform: capitalize;
-    line-height: 3rem;
-  }
-
-  .footer-content p {
-    max-width: 500px;
-    margin: 10px auto;
-    line-height: 28px;
-    font-size: 14px;
-  }
-
-  .socials {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0 3rem 0
-  }
-
-  .socials li{
-    margin: 0 10px;
-  }
-  .socials a {
-    text-decoration: none;
-    color: #fff;
-  }
-  .socials a i {
-    font-size: 1.1rem;
-    transition: color .4s ease;
-  }
-
-  .socials a:hover i {
-    color: aqua;
-  }
-
-  .footer-bottom {
-    background: #243940;
-    width: 100vw;
-    padding: 10px 0;
-    text-align: center;
-  }
-
-  .footer-bottom p {
-    font-size: 14px;
-    word-spacing: 2px;
-    text-transform: capitalize;
-  }
-
-  .footer-bottom span {
-    text-transform: uppercase;
-    opacity: .4;
-    font-weight: 200;
-  }
-
-  .copyright-section{
-        background-color: black;
-        color: white;
-        text-align: center;
-        padding: 10px 0;
-        padding-top: 18px;
-    }
-
-    .privacy_policy {
-        margin: 5px;
-      }
-      
+  
