--- a/style/privacy_policy.css
+++ b/style/privacy_policy.css
@@ -5,4 +5,103 @@ header {
      box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
      height: 50px
   }
-  
+
+  .copyright-section{
+    box-sizing: border-box;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    padding-top: 18px;
+}
+
+
+  footer {
+    position: relative;
+    top: 5px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    background: #243945;
+    height: auto;
+    width: 100vw;
+    font-family: "Open Sans";
+    padding-top: 40px;
+    color: #fff;
+  }
+
+  .footer-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .footer-content h3{
+    font-size: 1.8rem;
+    font-weight: 400;text-transform: capitalize;
+    line-height: 3rem;
+  }
+
+  .footer-content p {
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+  }
+
+  .socials {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0
+  }
+
+  .socials li{
+    margin: 0 10px;
+  }
+  .socials a {
+    text-decoration: none;
+    color: #fff;
+  }
+  .socials a i {
+    font-size: 1.1rem;
+    transition: color .4s ease;
+  }
+
+  .socials a:hover i {
+    color: aqua;
+  }
+
+  .footer-bottom {
+    background: #243940;
+    width: 100vw;
+    padding: 10px 0;
+    text-align: center;
+  }
+
+  .footer-bottom p {
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+  }
+
+  .footer-bottom span {
+    text-transform: uppercase;
+    opacity: .4;
+    font-weight: 200;
+  }
+
+  .submit {
+    margin-bottom: 25px;
+  }
+  .copyright-section{
+      background-color: black;
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+      padding-top: 18px;
+  }
