--- a/style/privacy_policy.css
+++ b/style/privacy_policy.css
@@ -1,22 +1,12 @@
-header {
+header > .navbar{
     background-color: #243945;
-     color: white;
-     border-radius: 20px;
-     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-     height: 50px
-  }
-
-  .copyright-section{
-    box-sizing: border-box;
-    background-color: black;
     color: white;
-    text-align: center;
-    padding: 10px 0;
-    padding-top: 18px;
+    border-radius: 20px;
+    margin: 5px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
-
-  footer {
+footer {
     position: relative;
     top: 5px;
     bottom: 0;
